k8s/production/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: auth
  namespace: auth
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: auth
  template:
    metadata:
      labels:
        name: auth
      annotations:
        iam.amazonaws.com/role: prod-auth
    spec:
      imagePullSecrets:
      - name: registry
      nodeSelector:
        node-role.kubernetes.io/node-components: ""
      containers:
      - env:
        - name: APP_MODE
          valueFrom:
            configMapKeyRef:
              name: auth
              key: APP_MODE
        name: auth
        image: razorpay/auth:e2e9d8e06ac90db83d5717ed6993b142ec3b54c0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: trace
            mountPath: /app/storage/logs/
          - name: nginx
            mountPath: /var/log/nginx/
        readinessProbe:
          httpGet:
            path: /status
            port: 80
            httpHeaders:
              - name: Host
                value: auth.razorpay.com
          initialDelaySeconds: 60
          periodSeconds: 120
        livenessProbe:
          httpGet:
            path: /commit.txt
            port: 80
            httpHeaders:
              - name: Host
                value: auth.razorpay.com
          initialDelaySeconds: 60
          periodSeconds: 20
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
      volumes:
      - name: trace
        hostPath:
          path: /var/log/fluentd/splunk/auth/trace
      - name: nginx
        hostPath:
          path: /var/log/fluentd/splunk/auth/nginx
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
